# BD-Canary-MCP

./: .dockerignore  .env.example  .env.original  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEBUG_MCP_SERVER.md  DEPLOYMENT_PACKAGE_SUMMARY.md  Dockerfile  FIX_API_ENDPOINTS.md  MANUAL_INSTALL_STEPS.md  README.md  README_simple_version.md  claude_desktop_config.json  claude_desktop_config.json - Shortcut.lnk  docker-compose.yml  index.html  install_claude_config.ps1  presentation.html  pyproject.toml  quick_test.py  test_browse_tags.ps1  test_canary_endpoints.bat  test_canary_endpoints.ps1  test_correct_endpoint.ps1  test_server_connection.ps1  update_api_token.py  verify_mcp_tools.py
.claude/: settings.local.json
.clinerules/workflows/: bmad-bmm-agents-analyst.md  bmad-bmm-agents-architect.md  bmad-bmm-agents-dev.md  bmad-bmm-agents-game-architect.md  bmad-bmm-agents-game-designer.md  bmad-bmm-agents-game-dev.md  bmad-bmm-agents-paige.md  bmad-bmm-agents-pm.md  bmad-bmm-agents-sm.md  bmad-bmm-agents-tea.md  bmad-bmm-agents-ux-designer.md  bmad-core-agents-bmad-master.md
.continue/mcpServers/: canary-mcp-server.yaml  new-mcp-server.yaml
.gemini/: GEMINI.md  settings.json
.kilocode/: mcp.json
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
config/: claude_desktop_config.json  claude_desktop_config_example_with_others.json
docs/: API.md  CHANGELOG.md  Canary info, Tests, Configs.md  MCP Canary - Process Historical Data.md  MCP_API_semantics_tags.md  PRD.md  REMOTE_HTTP_DEPLOYMENT.md  USER_ONBOARDING_GUIDE.md  architecture.md  bmm-workflow-status.md  canary-api-review.md  coverage-baseline.json  epic4.md  epics.md  examples.md  implementation-readiness-report-2025-10-31.md  maceira_postman_exampes.txt  multi-site-config.md  operational-runbook.md  product-brief-BD-hackaton-2025-10-2025-10-30.md  quick-setup.md  sprint-status.yaml
docs-hackaton-2025-10/: BMM answers.txt
docs-hackaton-2025-10/hackaton-anterior-0/: Technical_Architect_Agent_Instructions.txt  (+1 more)
logs/: mcp-server-canary-historian.log - Shortcut.lnk  mcp-server-canary-uv.log - Shortcut.lnk  mcp.log - Shortcut.lnk
presentation/: Canary_MCP_Server_Presentation.pptx  PRESENTATION.md  presentation_readable.html
scripts/: Install-Canary-MCP.cmd  README.md  Test-Epic4Story1.ps1  benchmark.py  build_vector_index.py  check_mcp.sh  create_presentation.py  debug_read_timeseries.py  debug_search_tags.py  deploy_canary_mcp.ps1  install_claude_config.bat  investigate_gettagdata.py  plot_kiln_speeds.py  quick_test.py  run_browse_status.py  run_cleanup_expired_cache.py  run_get_cache_stats.py  run_get_events_limit10.py  run_get_health.py  run_get_metrics.py  run_get_tag_data2.py  run_invalidate_cache.py  run_write_test_dataset.py  test_all_endpoints.ps1  test_canary_connection.py  test_canary_endpoints.ps1  test_endpoints_simple.ps1  test_mcp_tools.py  update_api_token.py  validate_dev_setup.py  validate_installation.py  verify_mcp_tools.py
tests/: __init__.py  conftest.py
(+172 files in other folders)
