[project]
name = "canary-mcp"
version = "1.0.0"
description = "Secil Canary MCP Server - Model Context Protocol server for Canary Historian plant data access"
readme = "README.md"
authors = [
    { name = "Bruno Dias", email = "bruno.dias@secil.pt" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.scripts]
canary-mcp = "canary_mcp:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "contract: Contract tests",
    "docker: Docker tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[dependency-groups]
dev = [
    "black>=25.11.0",
    "freezegun>=1.5.5",
    "matplotlib>=3.8.0",
    "mypy>=1.8.0",
    "pre-commit>=4.4.0",
    "python-pptx>=0.6.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.1.0",
    "structlog>=24.1.0",
    "types-requests>=2.31.0.20240406",
    "uv>=0.1.0",
]

[tool.mypy]
mypy_path = "src"
namespace_packages = true
